--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.8
 
 # Mod Properties
-	mod_version = 1.0.1
-	maven_group = com.example
+	mod_version = 1.0.2
+	maven_group = net.joemama
 	archives_base_name = stained-trees
 
 # Dependencies
