--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,12 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
 	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.3
-	loader_version=0.14.8
+	yarn_mappings=1.18.2+build.4
+	loader_version=0.14.9
 
 # Mod Properties
-	mod_version = 1.0.3
-	maven_group = net.joemama
+	mod_version = 1.0.5
+	maven_group = net.stainedtrees
 	archives_base_name = stained-trees
 
 # Dependencies
